--- a/package.json
+++ b/package.json
@@ -14,21 +14,26 @@
     "lint:inspect": "npx @eslint/config-inspector"
   },
   "dependencies": {
-    "@eslint/config-inspector": "^0.5.5",
-    "@eslint/js": "^9.13.0",
-    "@stylistic/eslint-plugin-js": "^2.9.0",
-    "@stylistic/eslint-plugin-ts": "^2.9.0",
-    "@typescript-eslint/eslint-plugin": "^8.11.0",
-    "@typescript-eslint/parser": "^8.11.0",
-    "eslint": "9.13.0",
+    "@eslint/config-inspector": "^1.0.0",
+    "@eslint/js": "^9.19.0",
+    "@stylistic/eslint-plugin-js": "^3.0.0",
+    "@stylistic/eslint-plugin-ts": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.22.0",
+    "@typescript-eslint/parser": "^8.22.0",
+    "eslint": "9.19.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "eslint-plugin-vue": "^9.29.1",
-    "globals": "^15.11.0",
-    "typescript-eslint": "^8.11.0",
+    "eslint-plugin-vue": "^9.32.0",
+    "globals": "^15.14.0",
+    "typescript-eslint": "^8.22.0",
     "vue-eslint-parser": "^9.4.3"
   },
   "devDependencies": {
-    "esbuild": "^0.24.0"
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.1",
+    "@semantic-release/npm": "^12.0.1",
+    "esbuild": "^0.24.2",
+    "semantic-release": "^24.2.1"
   }
 }
