--- a/.releaserc
+++ b/.releaserc
@@ -4,6 +4,7 @@
   "debug": false,
   "dryRun": false,
   "tagFormat": "v${version}",
+  "repositoryUrl": "https://github.com/goliafrs/eslint-config.git",
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
